--- a/JavaApplication25/nbproject/project.properties
+++ b/JavaApplication25/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JavaApplication25.jar
+dist.jar=${dist.dir}/III-Parcial-Programacion.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/JavaApplication25
+dist.jlink.output=${dist.jlink.dir}/III-Parcial-Programacion
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=JavaApplication25
-main.class=
+jlink.launcher.name=III-Parcial-Programacion
+main.class=Graficos.Registro
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
