--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /JavaApplication25/nbproject/private/
 /JavaApplication25/build/
+/III-Parcial-Programacion/build/
+/III-Parcial-Programacion/nbproject/private/
